--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
+                <a href="index.html">
+                    <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
                     <h1>MoviLink</h1>
                 </div>
                 <ul class="nav-menu">
@@ -64,7 +66,7 @@
                             <span class="blog-category">Conceitos</span>
                         </div>
                         <h3 class="blog-title">
-                            <a href="posts/logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a>
+                            <a href="logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a>
                         </h3>
                         <p class="blog-excerpt">Descubra como a logística integrada pode revolucionar a eficiência da sua empresa, conectando todos os processos desde a fabricação até a entrega final.</p>
                         <div class="blog-meta">
@@ -84,7 +86,7 @@
                             <span class="blog-category">Metodologias</span>
                         </div>
                         <h3 class="blog-title">
-                            <a href="posts/just-in-time.html">Just in Time: Produção no Momento Certo</a>
+                            <a href="just-in-time.html">Just in Time: Produção no Momento Certo</a>
                         </h3>
                         <p class="blog-excerpt">Entenda como o sistema JIT revolucionou a indústria mundial, reduzindo estoques e aumentando a eficiência operacional.</p>
                         <div class="blog-meta">
@@ -104,7 +106,7 @@
                             <span class="blog-category">Ferramentas</span>
                         </div>
                         <h3 class="blog-title">
-                            <a href="posts/kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a>
+                            <a href="kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a>
                         </h3>
                         <p class="blog-excerpt">Aprenda a implementar o sistema Kanban para gerenciar projetos de forma visual e identificar gargalos no processo.</p>
                         <div class="blog-meta">
@@ -124,7 +126,7 @@
                             <span class="blog-category">Metodologias</span>
                         </div>
                         <h3 class="blog-title">
-                            <a href="posts/kaizen.html">Kaizen: A Filosofia da Melhoria Contínua</a>
+                            <a href="kaizen.html">Kaizen: A Filosofia da Melhoria Contínua</a>
                         </h3>
                         <p class="blog-excerpt">Explore como a filosofia Kaizen pode transformar sua organização através de pequenas melhorias constantes e envolvimento de todos.</p>
                         <div class="blog-meta">
@@ -144,7 +146,7 @@
                             <span class="blog-category">Ferramentas</span>
                         </div>
                         <h3 class="blog-title">
-                            <a href="posts/5s.html">5S: Organizando o Ambiente de Trabalho</a>
+                            <a href="5s.html">5S: Organizando o Ambiente de Trabalho</a>
                         </h3>
                         <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
                         <div class="blog-meta">
@@ -163,9 +165,9 @@
                     <div class="sidebar-widget">
                         <h4>Conteúdos Populares</h4>
                         <ul class="popular-posts">
-                            <li><a href="posts/just-in-time.html">Just in Time: Produção no Momento Certo</a></li>
-                            <li><a href="posts/kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a></li>
-                            <li><a href="posts/logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a></li>
+                            <li><a href="just-in-time.html">Just in Time: Produção no Momento Certo</a></li>
+                            <li><a href="kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a></li>
+                            <li><a href="logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a></li>
                         </ul>
                     </div>
 
@@ -214,11 +216,11 @@
                 <div class="footer-section">
                     <h4>Temas</h4>
                     <ul>
-                        <li><a href="posts/logistica-integrada.html">Logística Integrada</a></li>
-                        <li><a href="posts/just-in-time.html">Just in Time</a></li>
-                        <li><a href="posts/kanban.html">Kanban</a></li>
-                        <li><a href="posts/kaizen.html">Kaizen</a></li>
-                        <li><a href="posts/5s.html">5S</a></li>
+                        <li><a href="logistica-integrada.html">Logística Integrada</a></li>
+                        <li><a href="just-in-time.html">Just in Time</a></li>
+                        <li><a href="kanban.html">Kanban</a></li>
+                        <li><a href="kaizen.html">Kaizen</a></li>
+                        <li><a href="5s.html">5S</a></li>
                     </ul>
                 </div>
             </div>
