--- a/equipe.html
+++ b/equipe.html
@@ -12,6 +12,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
+                <a href="index.html">
+                    <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
                     <h1>MoviLink</h1>
                 </div>
                 <ul class="nav-menu">
@@ -55,13 +57,13 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/samuel-profile.png" alt="Samuel - Criativo e Inovador">
+                            <img src="imagens/samuel.jpeg" alt="Samuel - Criativo e Inovador">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Samuel</h3>
                             <p class="member-role">Criativo e Inovador</p>
                             <div class="member-description">
-                                <p>Samuel é o visionário da equipe, responsável por transformar conceitos complexos de logística em ideias criativas e inovadoras. Sua paixão por design e storytelling permite criar experiências educativas únicas e envolventes.</p>
+                                <p>Meu nome é Samuel Silva, tenho 20 anos e sou estudante do curso técnico em Administração no SENAI. Faço parte do grupo Movilink, onde contribuo com inovação e criatividade para o blog, sempre buscando compartilhar conteúdos relevantes sobre logística integrada e gestão de processos.</p>
                             </div>
                             <div class="member-responsibilities">
                                 <h4>Principais Responsabilidades:</h4>
@@ -82,10 +84,10 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/kemelyn-profile.png" alt="Kemelyn - Estrategista e Conteudista">
+                            <img src="imagens/kemilyn.jpeg" alt="Kemely - Estrategista e Conteudista">
                         </div>
                         <div class="member-info">
-                            <h3 class="member-name">Kemelyn</h3>
+                            <h3 class="member-name">Kemilyn</h3>
                             <p class="member-role">Estrategista e Conteudista</p>
                             <div class="member-description">
                                 <p>Kemelyn é a mente estratégica por trás do MoviLink, especializada em transformar conhecimento acadêmico em conteúdo acessível e estruturado. Sua expertise em comunicação e pedagogia garante que cada material seja educativo e envolvente.</p>
@@ -109,7 +111,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="images/joao-pedro-profile.png" alt="João Pedro Dias - Técnico e Executador">
+                            <img src="imagens/joao.jpeg" alt="João Pedro Dias - Técnico e Executador">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">João Pedro Dias</h3>
