--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
+                <a href="index.html">
+                    <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
                     <h1>MoviLink</h1>
                 </div>
                 <ul class="nav-menu">
