--- a/sobre.html
+++ b/sobre.html
@@ -12,6 +12,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
+                <a href="index.html">
+                    <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
                     <h1>MoviLink</h1>
                 </div>
                 <ul class="nav-menu">
@@ -50,7 +52,9 @@
                 <div class="about-grid">
                     <div class="about-text">
                         <h2>Nossa Missão</h2>
-                        <p>O MoviLink nasceu com o objetivo de tornar o conhecimento logístico mais compreensível e atrativo para todos. Desenvolvemos um blog educativo com conteúdos explicativos sobre os principais processos logísticos, traduzindo o que é aprendido em sala de aula de forma clara, simples e visualmente organizada.</p>
+                        <p>Na Movilink Logística, nosso propósito é oferecer soluções inteligentes e eficientes para o transporte e a gestão de cargas. Trabalhamos para conectar empresas e pessoas com agilidade, segurança e transparência, garantindo que cada entrega seja realizada no prazo e com a máxima qualidade.
+
+Buscamos constantemente a inovação e a melhoria contínua, investindo em tecnologia, infraestrutura e no desenvolvimento de nossa equipe, para proporcionar uma experiência logística moderna e confiável. Nosso compromisso é simplificar processos, reduzir custos e gerar valor para nossos clientes em cada etapa da cadeia logística.</p>
                         
                         <h3>Por que MoviLink?</h3>
                         <p>A logística é uma área fundamental para o sucesso de qualquer negócio, mas muitas vezes seus conceitos podem parecer complexos e distantes da realidade prática. Nossa proposta é criar uma ponte entre a teoria acadêmica e a aplicação real, utilizando diferentes formatos de conteúdo para atender diversos estilos de aprendizagem.</p>
