--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                 <a href="index.html">
-                    <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
+                    <img src="logo.png" alt="MoviLink Logo" class="logo-image">
                     <h1>MoviLink</h1>
                 </div>
                 <ul class="nav-menu">
