--- a/equipe.html
+++ b/equipe.html
@@ -57,7 +57,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="samuel.jpeg" alt="Samuel - Criativo e Inovador">
+                            <img src="samuel.jpeg" alt="samuel - Criativo e Inovador" onerror="this.src='https://placehold.co/400x350/cccccc/333333?text=Imagem+Indisponível'">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Samuel</h3>
