--- a/5s.html
+++ b/5s.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5S: Organizando o Ambiente de Trabalho - MoviLink</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -85,7 +86,7 @@
                             <div class="pillar-item">
                                 <div class="pillar-header">
                                     <span class="pillar-number">1</span>
-                                    <h3>Seiri (整理) - Utilização</h3>
+                                    <h3>Seiri - Utilização</h3>
                                 </div>
                                 <div class="pillar-content">
                                     <p><strong>Conceito:</strong> Separar o necessário do desnecessário, mantendo apenas o que é realmente útil no ambiente de trabalho.</p>
@@ -103,7 +104,7 @@
                             <div class="pillar-item">
                                 <div class="pillar-header">
                                     <span class="pillar-number">2</span>
-                                    <h3>Seiton (整頓) - Organização</h3>
+                                    <h3>Seiton - Organização</h3>
                                 </div>
                                 <div class="pillar-content">
                                     <p><strong>Conceito:</strong> "Um lugar para cada coisa e cada coisa em seu lugar." Organizar os itens necessários de forma lógica e acessível.</p>
@@ -121,7 +122,7 @@
                             <div class="pillar-item">
                                 <div class="pillar-header">
                                     <span class="pillar-number">3</span>
-                                    <h3>Seiso (清掃) - Limpeza</h3>
+                                    <h3>Seiso - Limpeza</h3>
                                 </div>
                                 <div class="pillar-content">
                                     <p><strong>Conceito:</strong> Manter o ambiente limpo e inspecionar regularmente para identificar problemas antes que se tornem críticos.</p>
@@ -139,7 +140,7 @@
                             <div class="pillar-item">
                                 <div class="pillar-header">
                                     <span class="pillar-number">4</span>
-                                    <h3>Seiketsu (清潔) - Padronização</h3>
+                                    <h3>Seiketsu - Padronização</h3>
                                 </div>
                                 <div class="pillar-content">
                                     <p><strong>Conceito:</strong> Padronizar as melhores práticas dos três primeiros S's, criando procedimentos consistentes.</p>
@@ -157,7 +158,7 @@
                             <div class="pillar-item">
                                 <div class="pillar-header">
                                     <span class="pillar-number">5</span>
-                                    <h3>Shitsuke (躾) - Disciplina</h3>
+                                    <h3>Shitsuke - Disciplina</h3>
                                 </div>
                                 <div class="pillar-content">
                                     <p><strong>Conceito:</strong> Manter a disciplina para seguir os procedimentos estabelecidos e buscar melhoria contínua.</p>
@@ -465,6 +466,19 @@
         </article>
     </main>
 
+<label class="switch">
+  <input type="checkbox" checked="checked">
+  <div class="button">
+    <div class="light"></div>
+    <div class="dots"></div>
+    <div class="characters"></div>
+    <div class="shine"></div>
+    <div class="shadow"></div>
+  </div>
+</label>
+
+
+
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -475,10 +489,10 @@
                 <div class="footer-section">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="../index.html">Início</a></li>
-                        <li><a href="../sobre.html">Sobre</a></li>
-                        <li><a href="../blog.html">Blog</a></li>
-                        <li><a href="../equipe.html">Equipe</a></li>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="equipe.html">Equipe</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -493,12 +507,22 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
