--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - MoviLink</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -58,7 +59,7 @@
                         <button class="filter-btn" data-category="ferramentas">Ferramentas</button>
                     </div>
                 </div>
-
+                
                 <div class="blog-grid">
                     <article class="blog-card" data-category="conceitos">
                         <div class="blog-card-header">
@@ -225,12 +226,22 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
-
+    
     <script src="js/script.js"></script>
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
