--- a/equipe.html
+++ b/equipe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipe - MoviLink</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -57,7 +58,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="samuel.jpeg" alt="samuel - Criativo e Inovador" onerror="this.src='https://placehold.co/400x350/cccccc/333333?text=Imagem+Indisponível'">
+                            <img src="samuel.jpeg" alt="Samuel - Criativo e Inovador">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Samuel</h3>
@@ -194,7 +195,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -203,3 +204,13 @@
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
