--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoviLink - Logística Descomplicada</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header class="header">
@@ -155,12 +158,22 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
-
+    
     <script src="js/script.js"></script>
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
