--- a/logistica-integrada.html
+++ b/logistica-integrada.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logística Integrada: Unindo Todos os Processos - MoviLink</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -12,20 +13,20 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <h1><a href="../index.html" style="text-decoration: none; color: inherit;">MoviLink</a></h1>
+                    <h1><a href="index.html" style="text-decoration: none; color: inherit;">MoviLink</a></h1>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="../index.html" class="nav-link">Início</a>
+                        <a href="index.html" class="nav-link">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../sobre.html" class="nav-link">Sobre</a>
+                        <a href="sobre.html" class="nav-link">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../blog.html" class="nav-link active">Blog</a>
+                        <a href="blog.html" class="nav-link active">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../equipe.html" class="nav-link">Equipe</a>
+                        <a href="equipe.html" class="nav-link">Equipe</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -235,7 +236,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -244,3 +245,13 @@
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
