--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre - MoviLink</title>
+    <link rel="icon" type="imagens/x-icon" href=logo.png>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -53,7 +54,7 @@
                     <div class="about-text">
                         <h2>Nossa Missão</h2>
                         <p>Na Movilink Logística, nosso propósito é oferecer soluções inteligentes e eficientes para o transporte e a gestão de cargas. Trabalhamos para conectar empresas e pessoas com agilidade, segurança e transparência, garantindo que cada entrega seja realizada no prazo e com a máxima qualidade.
-
+                        </p>
 Buscamos constantemente a inovação e a melhoria contínua, investindo em tecnologia, infraestrutura e no desenvolvimento de nossa equipe, para proporcionar uma experiência logística moderna e confiável. Nosso compromisso é simplificar processos, reduzir custos e gerar valor para nossos clientes em cada etapa da cadeia logística.</p>
                         
                         <h3>Por que MoviLink?</h3>
@@ -177,7 +178,7 @@ Buscamos constantemente a inovação e a melhoria contínua, investindo em tecno
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MoviLink. Todos os direitos reservados.</p>
+                <p>&copy; 2025 MoviLink. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -186,3 +187,13 @@ Buscamos constantemente a inovação e a melhoria contínua, investindo em tecno
 </body>
 </html>
 
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
+</script>
