--- a/equipe.html
+++ b/equipe.html
@@ -91,7 +91,7 @@
                             <h3 class="member-name">Kemilyn</h3>
                             <p class="member-role">Estrategista e Conteudista</p>
                             <div class="member-description">
-                                <p>Kemelyn é a mente estratégica por trás do MoviLink, especializada em transformar conhecimento acadêmico em conteúdo acessível e estruturado. Sua expertise em comunicação e pedagogia garante que cada material seja educativo e envolvente.</p>
+                                <p>Kemilyn é a mente estratégica por trás do MoviLink, especializada em transformar conhecimento acadêmico em conteúdo acessível e estruturado. Sua expertise em comunicação e pedagogia garante que cada material seja educativo e envolvente.</p>
                             </div>
                             <div class="member-responsibilities">
                                 <h4>Principais Responsabilidades:</h4>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="member-story">
                                 <h4>História:</h4>
-                                <p>Kemelyn possui sólida formação em Comunicação e Pedagogia, com especialização em educação digital. Sua paixão por ensinar e comunicar de forma clara a levou ao MoviLink, onde pode combinar sua expertise em conteúdo com seu interesse pela área logística.</p>
+                                <p>Kemilyn possui sólida formação em Comunicação e Pedagogia, com especialização em educação digital. Sua paixão por ensinar e comunicar de forma clara a levou ao MoviLink, onde pode combinar sua expertise em conteúdo com seu interesse pela área logística.</p>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">João Pedro Dias</h3>
-                            <p class="member-role">Técnico e Executador</p>
+                            <p class="member-role">Técnico e Execudor</p>
                             <div class="member-description">
                                 <p>João Pedro é o especialista técnico da equipe, responsável por transformar ideias em realidade digital. Sua expertise em desenvolvimento web e tecnologias educacionais garante que a plataforma MoviLink seja robusta, acessível e funcional.</p>
                             </div>
