--- a/blog.html
+++ b/blog.html
@@ -160,6 +160,47 @@
                             <span class="tag">Produtividade</span>
                         </div>
                     </article>
+
+                    <article class="blog-card" data-category="ferramentas">
+                        <div class="blog-card-header">
+                            <div class="blog-icon">🧹</div>
+                            <span class="blog-category">Ferramentas</span>
+                        </div>
+                        <h3 class="blog-title">
+                            <a href="5s.html">5S: Organizando o Ambiente de Trabalho</a>
+                        </h3>
+                        <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
+                        <div class="blog-meta">
+                            <span class="blog-date">5 de Dezembro, 2024</span>
+                            <span class="blog-read-time">6 min de leitura</span>
+                        </div>
+                        <div class="blog-tags">
+                            <span class="tag">5S</span>
+                            <span class="tag">Organização</span>
+                            <span class="tag">Produtividade</span>
+                        </div>
+                    </article>
+
+                    <article class="blog-card" data-category="ferramentas">
+                        <div class="blog-card-header">
+                            <div class="blog-icon">📈</div>
+                            <span class="blog-category">Metodologias</span>
+                        </div>
+                        <h3 class="blog-title">
+                            <a href="compras.html">Compras Estratégicas: Do Operacional ao Estratégico</a>
+                        </h3>
+                        <p class="blog-excerpt">Comprar as matérias Primas é algo essencial para a Gestão de qualquer órgão</p>
+                        <div class="blog-meta">
+                            <span class="blog-date">5 de Dezembro, 2024</span>
+                            <span class="blog-read-time">6 min de leitura</span>
+                        </div>
+                        <div class="blog-tags">
+                            <span class="tag">Compras</span>
+                            <span class="tag">Estratégia</span>
+                            <span class="tag">Fornecedores</span>
+                        </div>
+                    </article>
+
                 </div>
 
                 <div class="blog-sidebar">
