--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
                         </h3>
                         <p class="blog-excerpt">Aprenda a implementar o sistema Kanban para gerenciar projetos de forma visual e identificar gargalos no processo.</p>
                         <div class="blog-meta">
-                            <span class="blog-date">10 de Dezembro, 2024</span>
+                            <span class="blog-date">10 de Dezembro, 2025</span>
                             <span class="blog-read-time">6 min de leitura</span>
                         </div>
                         <div class="blog-tags">
@@ -131,7 +131,7 @@
                         </h3>
                         <p class="blog-excerpt">Explore como a filosofia Kaizen pode transformar sua organização através de pequenas melhorias constantes e envolvimento de todos.</p>
                         <div class="blog-meta">
-                            <span class="blog-date">8 de Dezembro, 2024</span>
+                            <span class="blog-date">8 de Dezembro, 2025</span>
                             <span class="blog-read-time">8 min de leitura</span>
                         </div>
                         <div class="blog-tags">
@@ -151,7 +151,7 @@
                         </h3>
                         <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
                         <div class="blog-meta">
-                            <span class="blog-date">5 de Dezembro, 2024</span>
+                            <span class="blog-date">5 de Dezembro, 2025</span>
                             <span class="blog-read-time">6 min de leitura</span>
                         </div>
                         <div class="blog-tags">
@@ -161,45 +161,45 @@
                         </div>
                     </article>
 
-                    <article class="blog-card" data-category="ferramentas">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">🧹</div>
-                            <span class="blog-category">Ferramentas</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="5s.html">5S: Organizando o Ambiente de Trabalho</a>
-                        </h3>
-                        <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">5 de Dezembro, 2024</span>
-                            <span class="blog-read-time">6 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">5S</span>
-                            <span class="tag">Organização</span>
-                            <span class="tag">Produtividade</span>
-                        </div>
-                    </article>
+                    <article class="blog-card" data-category="conceitos">
+    <div class="blog-card-header">
+        <div class="blog-icon">📦</div>
+        <span class="blog-category">Conceitos</span>
+    </div>
+    <h3 class="blog-title">
+        <a href="Cadeia_de_Suprimentos.html">Cadeia de Suprimentos: Conceitos Fundamentais</a>
+    </h3>
+    <p class="blog-excerpt">Compreenda a rede interconectada de organizações e processos que movem produtos do fornecedor ao cliente final.</p>
+    <div class="blog-meta">
+        <span class="blog-date">20 de Dezembro, 2024</span>
+        <span class="blog-read-time">8 min de leitura</span>
+    </div>
+    <div class="blog-tags">
+        <span class="tag">SCM</span>
+        <span class="tag">Suprimentos</span>
+        <span class="tag">Logística</span>
+    </div>
+</article>
 
-                    <article class="blog-card" data-category="ferramentas">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">📈</div>
-                            <span class="blog-category">Metodologias</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="compras.html">Compras Estratégicas: Do Operacional ao Estratégico</a>
-                        </h3>
-                        <p class="blog-excerpt">Comprar as matérias Primas é algo essencial para a Gestão de qualquer órgão</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">5 de Dezembro, 2024</span>
-                            <span class="blog-read-time">6 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">Compras</span>
-                            <span class="tag">Estratégia</span>
-                            <span class="tag">Fornecedores</span>
-                        </div>
-                    </article>
+                    <article class="blog-card" data-category="conceitos">
+    <div class="blog-card-header">
+        <div class="blog-icon">💰</div>
+        <span class="blog-category">Conceitos</span>
+    </div>
+    <h3 class="blog-title">
+        <a href="compras.html">Compras Estratégicas: Do Operacional ao Estratégico</a>
+    </h3>
+    <p class="blog-excerpt">Descubra como a área de compras evoluiu para se tornar um pilar estratégico fundamental nas organizações.</p>
+    <div class="blog-meta">
+        <span class="blog-date">18 de Dezembro, 2024</span>
+        <span class="blog-read-time">10 min de leitura</span>
+    </div>
+    <div class="blog-tags">
+        <span class="tag">Compras</span>
+        <span class="tag">Estratégia</span>
+        <span class="tag">Fornecedores</span>
+    </div>
+</article>
 
                 </div>
 
