--- a/compras.html
+++ b/compras.html
@@ -139,7 +139,7 @@
                         <div style="margin-top: 20px; padding: 15px; background: var(--light-blue); border-radius: 8px; text-align: center;">
                             <h4>🎥 Conteúdo em Vídeo</h4>
                             <p>Assista ao nosso conteúdo sobre compras estratégicas no YouTube!</p>
-                            <a href="https://www.youtube.com/@movilink" target="_blank" class="btn btn-primary" style="margin-top: 10px;">
+                            <a href="https://www.youtube.com/@MOVILINK-i6r" target="_blank" class="btn btn-primary" style="margin-top: 10px;">
                                 Acessar Canal YouTube
                             </a>
                         </div>
@@ -148,14 +148,6 @@
             </div>
         </article>
     </main>
-
-<div class="video-container">
-        <video controls width="100%">
-            <source src="videos/CD.mp4" type="video/mp4">
-            <source src="videos/CD.webm" type="video/webm">
-            Seu navegador não suporta o elemento de vídeo.
-        </video>
-    </div>
 
     <footer class="footer">
         <div class="container">
