--- a/kanban.html
+++ b/kanban.html
@@ -371,6 +371,13 @@
                                 <span class="related-icon">⏰</span>
                                 <span class="related-title">Just in Time: Produção no Momento Certo</span>
                             </a>
+                            <div style="margin-top: 20px; padding: 15px; background: var(--light-blue); border-radius: 8px; text-align: center;">
+                            <h4>🎥 Conteúdo em Vídeo</h4>
+                            <p>Assista ao nosso conteúdo sobre cadeia de suprimentos no YouTube!</p>
+                            <a href="https://www.youtube.com/@MOVILINK-i6r" target="_blank" class="btn btn-primary" style="margin-top: 10px;">
+                                Acessar Canal YouTube
+                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
