--- a/logistica-integrada.html
+++ b/logistica-integrada.html
@@ -201,6 +201,13 @@
                                 <span class="related-icon">📋</span>
                                 <span class="related-title">Kanban: Visualizando o Fluxo de Trabalho</span>
                             </a>
+                            <div style="margin-top: 20px; padding: 15px; background: var(--light-blue); border-radius: 8px; text-align: center;">
+                            <h4>🎥 Conteúdo em Vídeo</h4>
+                            <p>Assista ao nosso conteúdo sobre cadeia de suprimentos no YouTube!</p>
+                            <a href="https://www.youtube.com/@MOVILINK-i6r" target="_blank" class="btn btn-primary" style="margin-top: 10px;">
+                                Acessar Canal YouTube
+                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
