Add new blog card for 'Recebimento de Materiais'

--- a/blog.html
+++ b/blog.html
@@ -201,6 +201,25 @@
     </div>
 </article>
 
+                <article class="blog-card" data-category="operacoes">
+    <div class="blog-card-header">
+        <div class="blog-icon">📦</div>
+        <span class="blog-category">Operações</span>
+    </div>
+    <h3 class="blog-title">
+        <a href="recebimentos_materiais.html">Recebimento de Materiais: Elimine o "Achismo"</a>
+    </h3>
+    <p class="blog-excerpt">Chega de "achismo" e café frio! Transforme seu recebimento de mercadorias em um espetáculo de produtividade com nossas dicas práticas.</p>
+    <div class="blog-meta">
+        <span class="blog-date">25 de Dezembro, 2024</span>
+        <span class="blog-read-time">10 min de leitura</span>
+    </div>
+    <div class="blog-tags">
+        <span class="tag">Recebimento</span>
+        <span class="tag">CD</span>
+        <span class="tag">Conferência</span>
+    </div>
+</article>
                 </div>
 
                 <div class="blog-sidebar">
